# ShaveAndAHaircut

./: .gitignore  CMakeLists.txt  ShaveAndAHaircut.py  ShaveAndAHaircut.service  all_lights.sh  cgraph.json  check_energy.py  config.sh  env.sh  install_service.sh  online.json  phue_test.py  run.py  run.sh
src/: SAAHDetect.cc  SAAHDetect.h  godec_SAAH.cc
